# Tls104Master-win

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: release.yml
src/: main.cpp
src/gui/: webview_window.cpp  webview_window.h
src/http/: server.cpp  server.h
src/iec104/: connection.cpp  connection.h
src/ipc/: bridge.cpp  bridge.h
src/platform/: socket.h
web/: index.html
